# Ifecaro-Engine

./: .env  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.frontend  Dockerfile.nginx  README.md  build.rs  commit_message.txt  commit_msg.txt  docker-compose.deploy.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  publickey.gpg  t notification behavior and CSS styles"  tailwind.config.js  test-all.sh  test-quick.sh  test-report.md
.cargo/: config.toml
.cursor/rules/: ReviewGateV2.mdc
.github/workflows/: ci.yml
docs/: Test-Documentation.md  choice_effects_design.md  choice_impacts_design.md
i18n/: af.ftl  ar-AE.ftl  ar-SA.ftl  ar-SY.ftl  bg-BG.ftl  bn-BD.ftl  bn.ftl  ca.ftl  cs-CZ.ftl  cs.ftl  da-DK.ftl  da.ftl  de-AT.ftl  de-DE.ftl  de-LU.ftl  doi.ftl  el-GR.ftl  el.ftl  en-GB.ftl  en-HK.ftl  en-IE.ftl  en-US.ftl  en-ZA.ftl  en.ftl  es-CL.ftl  es-CO.ftl  es-ES.ftl  es-MX.ftl  es-PE.ftl  es-UY.ftl  es.ftl  et-EE.ftl  et.ftl  eu.ftl  fa-IR.ftl  fa.ftl  fi-FI.ftl  fi.ftl  fil.ftl  fr-BE.ftl  (+64 more)
nginx/conf.d/: default.conf
nginx/conf.d/staging/: default.conf
nginx/vps/: README.md
nginx/vps/production/: mime.types  nginx.conf
nginx/vps/production/conf.d/: default.conf
nginx/vps/staging/conf.d/: default.conf
pocketbase/: docker-compose.yml
public/: manifest.json  sw.js  tailwind.css  wasm-loader.css  wasm-loader.js
scripts/: run_dashboard_tests.sh
src/: constants.rs  i18n.rs  input.css  layout.rs  lib.rs  main.rs
src/components/: chapter_selector.rs  choice_effects_editor.rs  choice_impacts_editor.rs  choice_options.rs  dropdown.rs  language_selector.rs  mod.rs  navbar.rs  paragraph_form.rs  paragraph_list.rs  scroll_lock_tests.rs  settings.rs  show_filter_blur_tests.rs  story_content.rs  story_content_advanced_tests.rs  story_content_api_integration_tests.rs  story_content_overlay_tests.rs  story_content_tests.rs  title.rs  toast.rs  translation_form.rs
src/components/form/: action_type_selector.rs  button.rs  checkbox.rs  choice_options.rs  dropdown.rs  error.rs  form.rs  group.rs  help.rs  input.rs  input_field.rs  label.rs  mod.rs  radio.rs  section.rs  select.rs  switch.rs  textarea.rs  textarea_field.rs  toggle.rs
src/constants/: config.rs
src/contexts/: chapter_context.rs  language_context.rs  mod.rs  paragraph_context.rs  settings_context.rs  story_context.rs  story_merged_context.rs  toast_context.rs
src/enums/: mod.rs  route.rs  style.rs  translations.rs
src/hooks/: choices_reducer.rs  mod.rs
src/models/: effects.rs  impacts.rs  mod.rs  multi_attr_check.rs  story.rs
src/pages/: auth.rs  dashboard.rs  home.rs  layout.rs  mod.rs  page_not_found.rs  story.rs  story_tests.rs
src/services/: api.rs  api_tests.rs  indexeddb.rs  indexeddb_js.js  mod.rs
src/utils/: mod.rs  theme.rs
tests/: README.md  README_dashboard_tests.md  choice_history.rs  dashboard_benchmark_tests.rs  dashboard_interaction_tests.rs  dashboard_tests.rs  dashboard_ui_tests.rs  enabled_choices_set_tests.rs  hide_choices_same_page_tests.rs  integration_tests.rs  main_code_usage_example.rs  overlay_hide_logic_tests.rs  paragraph_sync_tests.rs  reader_mode_integration_tests.rs  reader_mode_tests.rs  scroll_lock_effect_tests.rs  scroll_to_bottom_detection_tests.rs  story_content_logic_tests.rs  story_context_persistence_tests.rs  story_flow_tests.rs  toast_animation_css_tests.rs  toast_auto_dismiss_tests.rs  translation_availability_tests.rs  wasm_indexeddb_tests.rs
tests/common/: choice_history.rs  mod.rs
tools/deploy-remote/: Cargo.toml  build.rs
tools/deploy-remote/src/: main.rs
tools/tag-production/: Cargo.toml
tools/tag-production/src/: main.rs
