[package]
name = "ifecaro"
version = "0.15.1"
edition = "2021"
# build = false      # Commented out, now build.rs will be enabled

[lib]
name = "ifecaro"
path = "src/lib.rs"

[[bin]]
name = "ifecaro"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus = { git = "https://github.com/DioxusLabs/dioxus.git" }
# dioxus-router = { git = "https://github.com/DioxusLabs/dioxus.git" }
# dioxus-std = { git = "https://github.com/DioxusLabs/dioxus-std.git", features = [
#     "i18n",
# ] }
# dioxus-web = { git = "https://github.com/DioxusLabs/dioxus.git" }
# dioxus_markdown = { git = "https://github.com/DioxusLabs/markdown.git" }
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smallvec = { version = "1.15", features = ["serde"] }
serde-wasm-bindgen = "0.6.5"
async-trait = "0.1.88"
# serde = { git = "https://github.com/serde-rs/serde.git" }
# wasm-logger = { git = "https://gitlab.com/limira-rs/wasm-logger.git" }
dioxus = { version = "0.6.3", features = ["web", "router"] }
# dioxus-markdown = "0.5.0"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Storage",
    "IdbFactory",
    "IdbDatabase",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbObjectStore",
    "IdbIndex",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbObjectStoreParameters",
    "IdbIndexParameters",
    "Document",
    "HtmlElement",
    "Element",
    "Navigator",
] }
wasm-bindgen = "0.2.100"
regex = "1.11.1"
js-sys = "0.3.77"
# reqwest = { version = "0.12.4", features = ["json"] }
wasm-bindgen-futures = "0.4.50"
dioxus-i18n = "0.4.3"
unic-langid = { version = "0.9.6", features = ["unic-langid-macros"] }
rand = "0.8.5"
getrandom = { version = "0.2.16", features = ["js"] }
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"

# Debug
tracing = { version = "0.1.41", features = [
    "max_level_debug",
    "release_max_level_info",
] }
tracing-subscriber = "0.3.19"
dioxus-core = "0.6.3"
gloo-timers = { version = "0.3", features = ["futures"] }
dotenv = "0.15"

# Deployment tool dependencies
clap = { version = "4.5.39", features = ["derive"] }
anyhow = "1.0.98"
colored = "2.2.0"
chrono = { version = "0.4.41", features = ["serde"] }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
log = "0.4.27"
wasm-logger = "0.2.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[dev-dependencies]
dioxus-ssr = "0.6.2"
pretty_assertions = "1.4.1"
wasm-bindgen-test = "0.3.50"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { version = "1.45.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
wasm-bindgen-test = "0.3.50"

[build-dependencies]
dotenv = "0.15"

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"

[[bin]]
name = "test-runner"
path = "src/bin/test_runner.rs"
