[package]
name = "ifecaro"
version = "0.15.1"
edition = "2021"
# build = false      # Commented out, now build.rs will be enabled

[lib]
name = "ifecaro"
path = "src/lib.rs"

[[bin]]
name = "ifecaro"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = { version = "1.15", features = ["serde"] }
serde-wasm-bindgen = "0.6.5"
async-trait = "0.1.89"
dioxus = { version = "0.7.3", features = ["web", "router"] }
dioxus-toastr = { git = "https://github.com/togekk39/dioxus-toastr.git" }
web-sys = { version = "0.3.85", features = [
    "Window",
    "MediaQueryList",
    "Storage",
    "IdbFactory",
    "IdbDatabase",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbObjectStore",
    "IdbIndex",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbObjectStoreParameters",
    "IdbIndexParameters",
    "Document",
    "HtmlElement",
    "Element",
    "DomTokenList",
    "Navigator",
    "UrlSearchParams",
] }
wasm-bindgen = "0.2.108"
regex = "1.12.2"
js-sys = "0.3.85"
wasm-bindgen-futures = "0.4.58"
dioxus-i18n = "0.5.1"
unic-langid = { version = "0.9.6", features = ["unic-langid-macros"] }
rand = "0.8.5"
getrandom = { version = "0.2.17", features = ["js"] }
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
include_dir = "0.7"

# Debug
tracing = { version = "0.1.44", features = [
    "max_level_debug",
    "release_max_level_info",
] }
tracing-subscriber = "0.3.22"
dioxus-core = "0.7.3"
gloo-timers = { version = "0.3", features = ["futures"] }
dotenv = "0.15"

# Deployment tool dependencies
clap = { version = "4.5.56", features = ["derive"] }
anyhow = "1.0.100"
colored = "2.2.0"
chrono = { version = "0.4.43", features = ["serde"] }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
log = "0.4.29"
wasm-logger = "0.2.0"

[features]
web     = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile  = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[dev-dependencies]
dioxus-ssr = "0.7.3"
pretty_assertions = "1.4.1"
wasm-bindgen-test = "0.3.58"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { version = "1.49.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
wasm-bindgen-test = "0.3.58"

[build-dependencies]
dotenv = "0.15"

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"

[[bin]]
name = "test-runner"
path = "src/bin/test_runner.rs"
